fix: Se ajusta el contenido de la interfax de usuario: - Se elimina contenido no usado en `Modal.tsx` como título, clases redundantes o sin efecto en el componente - Se modifica el contenido de `PrinterDetails.tsx`, redefiniendo el contenido de 'Ciclo de trabajo máximo' para ser más claro y conciso. La lista de elementos en la sección de 'Consumibles' se convierte a elementos de párrafo `<p></p>`. Se edita el contenido del pie de página para indicar que la información presentada se obtiene de la ficha técnica de la marca - Se edita `global.css` para ocultar el scrollbar de la página completa al desplegar el modal, para evitar que se escrolee el contenido de la página completa en lugar del modal cuanto éste está abierto.

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -30,3 +30,8 @@
 ::-webkit-scrollbar-thumb:hover {
   background-color: #737373;
 }
+
+body[data-modal-open='true'] {
+  overflow: hidden;
+  padding-right: var(--scrollbar-compensation, 0);
+}
